@@ -42,6 +42,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #5853: calling a function of the mimetypes module from several threads
+  at once could hit the recursion limit if the mimetypes database hadn't been
+  initialized before.
+
 - Issue 5830:  The sched module no longer raises a TypeError when
   prioritizing Events with the same time and priority.
 
